--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -1,3 +1,148 @@
+body,html {
+    height : 100%;
+    margin: 8px;
+}
+
 body{
-    background-color: red;
+    background-color: black;
+}
+
+nav li {
+    display: inline;
+    margin: 20px;
+}
+
+nav ul {
+    background-color: black;
+    margin: 0;
+    list-style-type: none;
+    width: 100%;
+    padding: 20px;
+}
+
+nav {
+    display: block;
+    color: grey;
+}
+
+nav a{
+    color: grey;
+    text-decoration: none;
+}
+
+nav a:hover{
+    color: white;
+}
+
+.person-image{
+    background-image:
+    linear-gradient(to bottom, rgba(245,246,252,0.52),rgba(117, 19, 93, 0.73)),
+    url(../images/pexels-yuri-yuhara-7235129.jpg);
+    height: 50%;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    position: relative;
+}
+
+.person-text{
+    color:white;
+    text-align: center;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
+
+#main{
+    width: 75%;
+    float: left;
+    height: 100%;
+    padding-left: 20px;
+    padding-top: 20px;
+}
+
+#side{
+    width: 20%;
+    float:right;
+    height: 100%;
+    padding: 20px;
+}
+
+#profile-image{
+    width: 100px;
+    border-radius: 50%;
+    border: 5px solid lightgrey;
+}
+
+#profile{
+    text-align: center;
+}
+
+.side-articles ul{
+    list-style-type: none;
+    padding-left:0px;
+}
+
+#profile h2{
+    display: inline;
+}
+
+#profile-details{
+    margin-right: 30px;
+    text-align: center;
+}
+
+.side-articles, .main-articles{
+    padding: 10px;
+    margin-bottom: 10px;
+    border-radius: 10px;
+}
+
+.side-articles{
+    background-color: darkgrey;
+    text-align: center;
+}
+
+.main-articles{
+    background-color: lightgray;
+}
+
+form{
+    margin-top: 20px;
+
+}
+
+textarea, input{
+    background-color: lightgray;
+    border-radius: 5px;
+    padding: 5px;
+    margin: 5px;
+}
+
+.side-articles h1{
+    margin-bottom: 20px;
+}
+
+footer{
+    width:100%;
+    background-color: black;
+    height: 5vh;
+    margin-top: 0px;
+}
+
+footer div {
+    text-align: center;
+    color:white;
+}
+
+footer hr{
+    margin-top: 0px;
+    height: 12px;
+    border: 0px;
+    box-shadow:inset 0 12px 12px -12px white;
+}
+
+main{
+    overflow: auto;
 }
