--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -37,7 +37,7 @@ nav a:hover{
 .person-image{
     background-image:
     linear-gradient(to bottom, rgba(245,246,252,0.52),rgba(117, 19, 93, 0.73)),
-    url(../images/pexels-yuri-yuhara-7235129.jpg);
+    url(../images/cherryblossom.jpg);
     height: 50%;
     background-repeat: no-repeat;
     background-size: cover;
@@ -106,6 +106,7 @@ nav a:hover{
 
 .main-articles{
     background-color: lightgray;
+    text-align: justify;
 }
 
 form{
