--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -93,10 +93,11 @@ nav a:hover{
 
 #profile-details{
     margin-right: 30px;
-    text-align: center;
+    text-align: auto;
     color:darkgrey;
     
 }
+
 
 #profile-details ul{
     list-style-type: none;
@@ -163,6 +164,6 @@ main{
 }
 
 .img {
-    width:100%;
+    width: 100%;
     height: 100%;
 }
