--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -5,7 +5,7 @@ body,html {
 
 body{
     background-image: url("../images/background1.jpg");
-    background-size: auto;
+    background-size: 200%;
 }
 
 /** background image sourced from @marjanblan on unsplash **/
