--- a/css/stylesheet1.css
+++ b/css/stylesheet1.css
@@ -4,9 +4,9 @@ body,html {
 }
 
 body{
-    background-color: black;
+    background-image: url("../images2/background.jpg");
+    background-size: 200%;
 }
-
 nav li {
     display: inline;
     margin: 20px;
@@ -36,8 +36,8 @@ nav a:hover{
 
 .person-image{
     background-image:
-    linear-gradient(to bottom, rgba(245,246,252,0.52),rgba(117, 19, 93, 0.73)),
-    url(../images/cherryblossom.jpg);
+    linear-gradient(to bottom, rgba(245,246,252,0.52),rgba(57, 48, 55, 0.73)),
+    url(../images2/street\ copy.jpg);
     height: 50%;
     background-repeat: no-repeat;
     background-size: cover;
