--- a/css/stylesheet1.css
+++ b/css/stylesheet1.css
@@ -67,6 +67,8 @@ nav a:hover{
     margin-bottom: 10px;
     border-radius: 10px;
     margin-top: 10px;
+    float: top;
+    width: 75%;
 }
 
 .main-articles{
@@ -102,7 +104,8 @@ footer hr{
 }
 
 .img {
-    width: 100%;
-    height: 100%;
+    width: 50%;
+    height: 50%;
+    flex: center;
      
 }
