--- a/css/stylesheet1.css
+++ b/css/stylesheet1.css
@@ -54,11 +54,13 @@ nav a:hover{
     transform: translate(-50%, -50%);
 }
 
-#main_1{
-    width: 50%;
+#main1{
+    width: 100%;
     height: 50%;
     padding-left: 20px;
     padding-top: 20px;
+    transform: translate(5%);
+    position: relative;
 }
 
 
@@ -67,8 +69,8 @@ nav a:hover{
     margin-bottom: 10px;
     border-radius: 10px;
     margin-top: 10px;
-    float: top;
-    width: 75%;
+    width: 80%;
+    
 }
 
 .main-articles{
