--- a/css/stylesheet1.css
+++ b/css/stylesheet1.css
@@ -76,7 +76,7 @@ nav a:hover{
 .main-articles{
     background-color: rgba(236, 234, 234, .1);
     color:darkgray;
-    text-align: justify;
+    text-align: center;
 }
 
 textarea, input{
@@ -108,6 +108,5 @@ footer hr{
 .img {
     width: 50%;
     height: 50%;
-    flex: center;
      
 }
