--- a/css/stylesheet1.css
+++ b/css/stylesheet1.css
@@ -95,14 +95,14 @@ footer{
 
 footer div {
     text-align: center;
-    color:white;
+    color:rgb(104, 100, 100);
 }
 
 footer hr{
     margin-top: 0px;
     height: 12px;
     border: 0px;
-    box-shadow:inset 0 12px 12px -12px white;
+    box-shadow:inset 0 12px 12px -12px rgb(65, 61, 61);
 }
 
 .img {
