--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -59,11 +59,11 @@ nav a:hover{
 }
 
 #main{
-    width: 75%;
-    float: left;
+    width: 60%;
     height: 100%;
     padding-left: 20px;
     padding-top: 20px;
+    transform: translate(30%);
 }
 
 
@@ -117,9 +117,10 @@ nav a:hover{
     margin-top: 10px;
     background-color: rgba(236, 234, 234, .1);
     text-align: center;
-    width: 20%;
-    float: right;
+    width: 40%;
     color:darkgrey;
+    display: inline-block;
+    transform: translate(70%);
 }
 
 .main-articles{
@@ -169,10 +170,10 @@ main{
 
 form{
     overflow: auto;
+   
 }
 
 .img {
-    width: 100%;
-    height: 100%;
-     
+    width: 45%;
+    height: 45%;
 }
